! fix alternative for weekend alignment

--- a/Assets/gantt.css
+++ b/Assets/gantt.css
@@ -15,7 +15,7 @@ div.ganttview {
 }
 
 div.ganttview-hzheader-month {
-    width: 60.3px;
+    width: 60px;
     height: 20px;
     border-right: 1px solid #d0d0d0;
     line-height: 20px;
@@ -23,7 +23,7 @@ div.ganttview-hzheader-month {
 }
 
 div.ganttview-hzheader-day {
-    width: 20.1px;
+    width: 20px;
     height: 20px;
     border-right: 1px solid #f0f0f0;
     border-top: 1px solid #d0d0d0;
@@ -77,7 +77,7 @@ div.ganttview-slide-container {
 }
 
 div.ganttview-grid-row-cell {
-    width: 20.1px;
+    width: 20px;
     height: 31px;
     border-right: 1px solid #f0f0f0;
     border-top: 1px solid #f0f0f0;
